# spacehacks

./: .env.example  .gitignore  00-quick-start.ipynb  KNOWLEDGE_GRAPH_README.md  README.md  SB_publication_PMC.csv  ingest_checkpoint.jsonl  pyproject.toml  requirements.txt
docs/: architecture.md  dashboard_concept.md
frontend/: README.md
rag/: chunking_utils.py  ingest.py  ingest_all_articles.py  ingest_all_chunked_articles.py  ingest_chunk_bulk.py  ingest_single_article.py  ingest_single_article_chunked.py  ingest_single_article_pipeline.py  knowledge_graph.py  query.py  retrieve_titles.py  test_knowledge_graph.py
scripts/: bootstrap_demo.py  fetch_nasa_data.py
src/atlas/: __init__.py  config.py
src/atlas/ai/: llm.py  summarizer.py
src/atlas/graph/: builder.py  schema.py
src/atlas/ingest/: csv_loader.py  models.py  nasa_api.py
src/atlas/processing/: entities.py  text.py
web/: README.md  package-lock.json  package.json  pnpm-lock.yaml
web.bak/: README.md
web/src/lib/: expertise.ts  types.ts
web/src/lib/components/: ChatContainer.svelte  ChatInput.svelte  ChatMessage.svelte  KnowledgeGraph.svelte  KnowledgeGraphPreview.svelte  Loader.svelte
web/src/lib/stores/: highlightedSources.ts
web/src/routes/: +page.svelte
web/src/routes/api/chat/: +server.ts
web/src/routes/api/graph/: +server.ts
web/src/routes/api/knowledge-graph/: +server.ts
web/src/routes/knowledge-graph/: +page.svelte
