[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "spacehacks-atlas"
version = "0.1.0"
description = "Knowledge-graph driven dashboard summarizing NASA bioscience publications"
readme = "README.md"
authors = [
  {name = "Spacehacks Team"}
]
requires-python = ">=3.10"
dependencies = [
  "pandas>=2.0",
  "pydantic>=2.6",
  "typer>=0.9",
  "networkx>=3.1",
  "rapidfuzz>=3.6",
  "sentence-transformers>=2.2",
  "faiss-cpu>=1.7",
  "spacy>=3.7",
  "beautifulsoup4>=4.12",
  "requests>=2.31",
  "python-dotenv>=1.0",
  "sqlmodel>=0.0.14"
]

[project.optional-dependencies]
dev = [
  "black>=24.3",
  "ruff>=0.4",
  "mypy>=1.8",
  "pytest>=8.1",
  "pytest-asyncio>=0.23"
]

[tool.setuptools.packages.find]
where = ["src"]
